...
    favorite: true,
  },
  {
    id: 'shiny-gigantamax-charizard',
    cp: 2626,
    dexNumber: 6,
    name: 'Shiny Gigantamax Charizard',
    imagePath: '/images/shiny_gigantamax/shiny_gigantamax_6.png',
    typeIconPaths: ['/images/types/fire.png', '/images/types/flying.png'],
    favorite: true,
    maxKind: 'gigantamax',
  },
  {
...
    favorite: true,
  },
  {
    id: 'shiny-metagross',
    cp: 3653,
    dexNumber: 376,
    name: 'Shiny Metagross',
    imagePath: '/images/shiny/shiny_pokemon_376.png',
    typeIconPaths: ['/images/types/steel.png', '/images/types/psychic.png'],
    favorite: true,
  },
];

