...
      );
    }

    return (
      <div className="toggle-button" onClick={onHaveTagsClick}>
        <span className={`toggle-text ${isHaveTagsActive ? 'active' : ''}`}>
          TAGS
        </span>

        {haveTagsSubLabel && (
          <span className={`toggle-text toggle-subtext ${isHaveTagsActive ? 'active' : ''}`}>
            {haveTagsSubLabel}
          </span>
...
